--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <a id="m-official-link" href="#" target="_blank" class="btn btn-primary btn-lg shadow-sm">
                         👉 前往官網查看最新出發日與售價
                     </a>
-                    <small class="text-muted text-center">點擊將開啟新魅力旅遊官方網頁，查看即時報名狀況</small>
+                    <small class="text-muted text-center">點擊將開啟公司官網行程頁面，查看詳細出發日與售價</small>
                 </div>
                 <div class="mb-4"></div> </div>
             <div class="modal-footer">
