--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
     <div class="container d-flex justify-content-between align-items-end">
         <div class="header-title">
-            ✈️ 行程DM專區
+            ✈️ 直售DM行程下載
         </div>
         
         <div class="header-info d-flex align-items-center">
