--- a/lisa/index.html
+++ b/lisa/index.html
@@ -47,7 +47,7 @@
                 <div>業務：蔡雅筑</div>
                 <div>手機：0920277072</div>
             </div>
-            <a href="https://line.me/ti/p/I_O5--_4ks" target="_blank">
+            <a href="https://line.me/ti/p/peLdih_4DD" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/LINE_logo.svg" alt="LINE" height="36">
             </a>
         </div>
