--- a/fenny/index.html
+++ b/fenny/index.html
@@ -47,7 +47,7 @@
                 <div>業務：王麗芬</div>
                 <div>手機：0937019875</div>
             </div>
-            <a href="https://line.me/ti/p/I_O5--_4ks" target="_blank">
+            <a href="https://line.me/ti/p/kxz3K9hWWp" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/LINE_logo.svg" alt="LINE" height="36">
             </a>
         </div>
