--- a/wei/index.html
+++ b/wei/index.html
@@ -67,7 +67,7 @@
             </div>
             <div class="modal-body fs-6">
                 <p>感謝您使用本網站，本網站內容由業務維護，已盡力維持資訊正確性，但可能還是會有疏漏與勘誤。</p>
-                <p>同業夥伴請先與業務-百百聯繫。</p>
+                <p>同業夥伴請先與業務-小黑聯繫。</p>
                 <p class="mb-0 fw-bold">網站內容僅供參考，請以業務回覆為準，謝謝！</p>
             </div>
             <div class="modal-footer justify-content-center">
