--- a/pai/index.html
+++ b/pai/index.html
@@ -92,7 +92,7 @@
                     </div>
                     <div class="col-md-8 text-md-end mt-2 mt-md-0 d-flex justify-content-md-end gap-2">
                         <a id="m-dm-download" href="#" target="_blank" class="btn btn-outline-success">
-                            📥 下載 DM 圖檔
+                            📥 下載 高畫質DM
                         </a>
                         <a id="m-doc" href="#" class="btn btn-outline-primary">
                             📥 下載 Word 行程
