--- a/maker/index.html
+++ b/maker/index.html
@@ -330,18 +330,28 @@
                 return;
             }
 
-            libraryGrid.innerHTML = dmLibrary.map(dm => `
+            libraryGrid.innerHTML = dmLibrary.map(dm => {
+                // 自動將原圖網址轉換為 _m 縮圖 (例如 photo.jpg -> photo_m.jpg)
+                // 使用 regex: 找到最後一個點(.)及其後的副檔名，並在點之前插入 _m
+                const thumbnailUrl = dm.url.replace(/(\.[^./?]+)(\?.*)?$/, '_m$1$2');
+
+                return `
                 <div class="dm-item cursor-pointer bg-white rounded-lg shadow overflow-hidden border border-gray-200 transition-transform duration-200 group"
                      onclick="selectDmFromLibrary('${dm.url}')">
                     <div class="h-48 overflow-hidden bg-gray-200 flex items-center justify-center relative">
-                        <img src="${dm.url}" alt="${dm.name}" class="w-full h-full object-cover" loading="lazy">
+                        <img src="${thumbnailUrl}" 
+                             onerror="this.onerror=null;this.src='${dm.url}';"
+                             alt="${dm.name}" 
+                             class="w-full h-full object-cover" 
+                             loading="lazy">
                         <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-10 transition-all"></div>
                     </div>
                     <div class="p-3">
                         <p class="font-bold text-gray-700 text-sm text-center truncate" title="${dm.name}">${dm.name}</p>
                     </div>
                 </div>
-            `).join('');
+            `;
+            }).join('');
         }
 
         function selectDmFromLibrary(url) {
