--- a/pai/index.html
+++ b/pai/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="世興DM、行程下載專區">
     <meta property="og:description" content="由專屬業務陳彥百服務：提供最新旅遊行程DM預覽、Word行程表下載，以及售價查詢。">
     <meta property="og:image" content="https://0917268665.github.io/DM/logo.png">
-    <meta property="og:url" content="https://0917268665.github.io/DM/">
+    <meta property="og:url" content="https://0917268665.github.io/DM/pai/">
     <meta property="og:type" content="website">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
