--- a/pai/index.html
+++ b/pai/index.html
@@ -82,7 +82,7 @@
         </div>
 
         <div class="text-center mt-3">
-            <a href="https://0917268665.github.io/DM/maker/" class="btn btn-light text-danger fw-bold w-100 shadow-sm" style="border-radius: 50px;">
+            <a href="https://0917268665.github.io/DM/pai/maker.html" class="btn btn-light text-danger fw-bold w-100 shadow-sm" style="border-radius: 50px;">
                 ✨ 點我前往貼標神器 ✨
             </a>
         </div>
