--- a/pai/index.html
+++ b/pai/index.html
@@ -154,7 +154,7 @@
                         </a>
                     </div>
                     <div class="col-12 text-start mt-1">
-                        <small class="text-muted" style="font-size: 0.8rem;">(手機請點擊「下載DM」後，長按圖片儲存)</small>
+                        <small class="text-muted" style="font-size: 0.8rem;">(如需合成您的logo底標，請前往貼標神器)</small>
                     </div>
                 </div>
 
