--- a/pai/content.html
+++ b/pai/content.html
@@ -8,7 +8,7 @@
     
     <meta property="og:title" content="世興DM文案小幫手">
     <meta property="og:description" content="提供行程廣告文案與素材下載。">
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="https://0917268665.github.io/DM/pai/content.html">
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -217,7 +217,7 @@
 
 <script>
     // ================= 設定區 =================
-    const googleSheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTcPCobeix2WBU69fxSbx9IKFJpPtP04dutrcHp-KV8L1vnAEcUErx-x0zfGbBBYaUWtzgR-ZZR6W6B/pub?output=csv";
+    const googleSheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTcPCobeix2WBU69fxSbx9IKFJpPtP04dutrcHp-KV8L1vnAEcUErx-x0zfGbBBYaUWtzgR-ZZR6W6B/pub?gid=1046620833&single=true&output=csv";
     // =========================================
 
     let ALL_DATA = [];
