--- a/pai/index.html
+++ b/pai/index.html
@@ -65,7 +65,8 @@
     </div>
     
     <div class="container">
-        <div class="d-flex justify-content-between align-items-end mb-2">
+        <!-- 第一列：標題與聯絡資訊 -->
+        <div class="d-flex justify-content-between align-items-end mb-3">
             <div class="header-title">
                 ✈️ 直售DM行程下載
             </div>
@@ -81,9 +82,13 @@
             </div>
         </div>
 
-        <div class="text-center mt-3">
-            <a href="https://0917268665.github.io/DM/pai/maker.html" class="btn btn-light text-danger fw-bold w-100 shadow-sm" style="border-radius: 50px;">
+        <!-- 第二列：功能按鈕 (左右平分) -->
+        <div class="d-flex gap-2">
+            <a href="https://0917268665.github.io/DM/pai/maker.html" class="btn btn-light text-danger fw-bold shadow-sm flex-fill py-2" style="border-radius: 50px;">
                 ✨ 點我前往貼標神器 ✨
+            </a>
+            <a href="https://0917268665.github.io/DM/pai/content.html" class="btn btn-light text-primary fw-bold shadow-sm flex-fill py-2" style="border-radius: 50px;">
+                📝 點我前往文案小幫手 📝
             </a>
         </div>
     </div>
@@ -146,14 +151,17 @@
                         <small class="text-muted">行程編號</small>
                         <div class="fw-bold fs-5 text-primary" id="m-id">--</div>
                     </div>
-                    <!-- 修改：將按鈕與提示文字整合在同一欄，並設定靠右對齊 -->
                     <div class="col-md-8 mt-2 mt-md-0">
-                        <div class="d-flex justify-content-md-end gap-2">
-                            <a id="m-dm-download" href="#" target="_blank" class="btn btn-outline-success">
+                        <!-- 修改：按鈕樣式改為空心，顏色：[Word:藍] [DM:紅] [貼標:綠] -->
+                        <div class="d-flex justify-content-md-end gap-2 flex-wrap">
+                            <a id="m-doc" href="#" class="btn btn-outline-primary shadow-sm">
+                                📥 下載 Word 行程
+                            </a>
+                            <a id="m-dm-download" href="#" target="_blank" class="btn btn-outline-danger shadow-sm">
                                 📥 下載 DM 圖檔
                             </a>
-                            <a id="m-doc" href="#" class="btn btn-outline-primary">
-                                📥 下載 Word 行程
+                            <a href="https://0917268665.github.io/DM/pai/maker.html" target="_blank" class="btn btn-outline-success shadow-sm">
+                                🎨 前往貼標神器
                             </a>
                         </div>
                         <div class="text-end mt-1">
