--- a/pai/index.html
+++ b/pai/index.html
@@ -7,7 +7,7 @@
     <title>世興DM、行程下載</title>
     
     <meta property="og:title" content="世興DM、行程下載專區">
-    <meta property="og:description" content="由專屬業務陳彥百服務：提供最新旅遊行程DM預覽、Word行程表下載，以及售價查詢。">
+    <meta property="og:description" content="由專屬業務陳彥百服務：提供最新旅遊行程DM、Word行程表下載，以及售價查詢。">
     <meta property="og:image" content="https://0917268665.github.io/DM/logo.png">
     <meta property="og:url" content="https://0917268665.github.io/DM/pai/">
     <meta property="og:type" content="website">
@@ -85,10 +85,10 @@
         <!-- 第二列：功能按鈕 (左右平分) -->
         <div class="d-flex gap-2">
             <a href="https://0917268665.github.io/DM/pai/maker.html" class="btn btn-light text-danger fw-bold shadow-sm flex-fill py-2" style="border-radius: 50px;">
-                ✨ 點我前往貼標神器 ✨
+                ✨ 點我前往貼標神器
             </a>
             <a href="https://0917268665.github.io/DM/pai/content.html" class="btn btn-light text-primary fw-bold shadow-sm flex-fill py-2" style="border-radius: 50px;">
-                📝 點我前往文案小幫手 📝
+                📝 點我前往文案小幫手
             </a>
         </div>
     </div>
