--- a/pai/makerup.html
+++ b/pai/makerup.html
@@ -80,7 +80,7 @@
             <!-- Info Row -->
             <div class="flex flex-col md:flex-row justify-between items-end md:items-center gap-4 pb-4">
                 <div class="text-xl font-bold text-white">
-                    📸 世興 DM 貼標神器
+                    📸 世興DM貼標神器
                 </div>
                 
                 <div class="flex items-center gap-3">
@@ -94,10 +94,15 @@
                 </div>
             </div>
 
-            <!-- Button -->
-            <div class="text-center">
-                 <a href="https://0917268665.github.io/DM/pai/" class="block w-full bg-white text-[#f37021] font-bold py-2 rounded-full shadow-sm hover:bg-gray-50 transition">
-                    點我回到行程下載
+            <!-- Buttons (Dual Button Layout) -->
+            <!-- 修改：將單一按鈕改為雙按鈕並排，並套用指定樣式 -->
+            <div class="flex gap-3">
+                 <!-- 修改：按鈕文字改為 "📝 點我前往文案小幫手" -->
+                 <a href="https://0917268665.github.io/DM/pai/content.html" target="_blank" class="flex-1 bg-white text-red-500 font-bold py-2 rounded-full shadow-sm hover:bg-gray-50 transition text-center">
+                    📝 點我前往文案小幫手
+                </a>
+                 <a href="https://0917268665.github.io/DM/pai/" class="flex-1 bg-white text-blue-600 font-bold py-2 rounded-full shadow-sm hover:bg-gray-50 transition text-center">
+                    🏠 回行程下載
                 </a>
             </div>
         </div>
