--- a/pai/maker.html
+++ b/pai/maker.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>世興DM貼標神器</title>
+    <title>世興 DM 貼標神器</title>
     <!-- 使用 Tailwind CSS 快速美化介面 -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -78,10 +78,10 @@
             </div>
             
             <!-- Info Row -->
-            <!-- 修改：移除 border-b border-white/30 以去掉分隔線，同時移除了 mb-4 以縮減間距 -->
+            <!-- 修改：移除 border-b border-white/30 以去掉分隔線 -->
             <div class="flex flex-col md:flex-row justify-between items-end md:items-center gap-4 pb-4">
                 <div class="text-xl font-bold text-white">
-                    📸 世興 DM 貼標神器
+                    📸 世興DM貼標神器
                 </div>
                 
                 <div class="flex items-center gap-3">
@@ -95,10 +95,15 @@
                 </div>
             </div>
 
-            <!-- Button -->
-            <div class="text-center">
-                 <a href="https://0917268665.github.io/DM/pai/" class="block w-full bg-white text-[#f37021] font-bold py-2 rounded-full shadow-sm hover:bg-gray-50 transition">
-                    點我回到行程下載
+            <!-- Buttons (Dual Button Layout) -->
+            <!-- 修改：將單一按鈕改為雙按鈕並排，並套用指定樣式 -->
+            <div class="flex gap-3">
+                 <!-- 修改：按鈕文字改為 "📝 點我前往文案小幫手" -->
+                 <a href="https://0917268665.github.io/DM/pai/content.html" target="_blank" class="flex-1 bg-white text-red-500 font-bold py-2 rounded-full shadow-sm hover:bg-gray-50 transition text-center">
+                    📝 點我前往文案小幫手
+                </a>
+                 <a href="https://0917268665.github.io/DM/pai/" class="flex-1 bg-white text-blue-600 font-bold py-2 rounded-full shadow-sm hover:bg-gray-50 transition text-center">
+                    🏠 回行程下載
                 </a>
             </div>
         </div>
@@ -132,7 +137,7 @@
                         從 DM 圖庫選取
                     </button>
 
-                    <!-- 修改：移除了上傳檔案的 input 與分隔線 -->
+                    <!-- 修改：移除了上傳檔案 input 與分隔線 -->
                 </div>
 
                 <!-- Step 2 -->
