--- a/pai/index.html
+++ b/pai/index.html
@@ -155,10 +155,10 @@
                         <!-- 修改：按鈕樣式改為空心，顏色：[Word:藍] [DM:紅] [貼標:綠] -->
                         <div class="d-flex justify-content-md-end gap-2 flex-wrap">
                             <a id="m-doc" href="#" class="btn btn-outline-primary shadow-sm">
-                                📥 下載 Word 行程
+                                📥 下載 Word
                             </a>
                             <a id="m-dm-download" href="#" target="_blank" class="btn btn-outline-danger shadow-sm">
-                                📥 下載 DM 圖檔
+                                📥 下載 DM
                             </a>
                             <a href="https://0917268665.github.io/DM/pai/maker.html" target="_blank" class="btn btn-outline-success shadow-sm">
                                 🎨 前往貼標神器
