--- a/fenny/content.html
+++ b/fenny/content.html
@@ -164,10 +164,10 @@
             
             <div class="header-info d-flex align-items-center">
                 <div class="me-2">
-                    <div>業務：陳彥百(百百)</div>
-                    <div>手機：0917268665</div>
+                <div>業務：王麗芬</div>
+                <div>手機：0937019875</div>
                 </div>
-                <a href="https://line.me/ti/p/I_O5--_4ks" target="_blank">
+                <a href="https://line.me/ti/p/kxz3K9hWWp" target="_blank">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/LINE_logo.svg" alt="LINE" height="36">
                 </a>
             </div>
@@ -175,10 +175,10 @@
 
         <!-- 功能按鈕 -->
         <div class="d-flex gap-2">
-            <a href="https://0917268665.github.io/DM/pai/maker.html" target="_blank" class="btn btn-light text-danger fw-bold shadow-sm flex-fill py-2" style="border-radius: 50px;">
+            <a href="https://0917268665.github.io/DM/fenny/maker.html" target="_blank" class="btn btn-light text-danger fw-bold shadow-sm flex-fill py-2" style="border-radius: 50px;">
                 ✨ 點我前往貼標神器
             </a>
-            <a href="https://0917268665.github.io/DM/pai/" class="btn btn-light text-primary fw-bold shadow-sm flex-fill py-2" style="border-radius: 50px;">
+            <a href="https://0917268665.github.io/DM/fenny/" class="btn btn-light text-primary fw-bold shadow-sm flex-fill py-2" style="border-radius: 50px;">
                 🏠 回行程下載
             </a>
         </div>
@@ -464,7 +464,7 @@
 
         // 3. 貼標神器按鈕
         actionArea.innerHTML += `
-            <a href="https://0917268665.github.io/DM/pai/maker.html" target="_blank" class="btn btn-outline-success btn-sm">
+            <a href="https://0917268665.github.io/DM/fenny/maker.html" target="_blank" class="btn btn-outline-success btn-sm">
                 <i class="bi bi-magic"></i> 前往貼標神器
             </a>
         `;
