--- a/pai/content.html
+++ b/pai/content.html
@@ -422,7 +422,7 @@
                 const file = item.docFiles[0];
                 actionArea.innerHTML += `
                     <a href="${file.url}" target="_blank" class="btn btn-outline-primary btn-sm">
-                        <i class="bi bi-file-word"></i> ${file.name}
+                        <i class="bi bi-file-word"></i> 下載ｗord
                     </a>
                 `;
             } else {
